WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
196405
REGRESSION (
r243523
): Six form-related watchOS layout tests are timing out
https://bugs.webkit.org/show_bug.cgi?id=196405
Summary
REGRESSION (r243523): Six form-related watchOS layout tests are timing out
Chris Dumez
Reported
2019-03-29 12:21:00 PDT
Six form-related watchOS layout tests are timing out since
r243523
.
Attachments
Patch
(7.05 KB, patch)
2019-03-29 12:24 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2019-03-29 12:21:24 PDT
<
rdar://problem/49428130
>
Chris Dumez
Comment 2
2019-03-29 12:24:58 PDT
Created
attachment 366293
[details]
Patch
WebKit Commit Bot
Comment 3
2019-03-29 13:12:00 PDT
Comment on
attachment 366293
[details]
Patch Clearing flags on attachment: 366293 Committed
r243657
: <
https://trac.webkit.org/changeset/243657
>
WebKit Commit Bot
Comment 4
2019-03-29 13:12:02 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug