Tools/WebKitTestRunner/TestOptions.h
@@ -90,6 +90,7 @@ struct TestOptions {
     bool editable { false };
     bool enableUndoManagerAPI { false };
     bool shouldHandleRunOpenPanel { true };
+    bool shouldPresentPopovers { true };
 
     double contentInsetTop { 0 };
 
@@ -138,6 +139,7 @@ struct TestOptions {
             || editable != options.editable
             || enableUndoManagerAPI != options.enableUndoManagerAPI
             || shouldHandleRunOpenPanel != options.shouldHandleRunOpenPanel
+            || shouldPresentPopovers != options.shouldPresentPopovers
             || contentInsetTop != options.contentInsetTop)
             return false;
 
